--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -55,12 +55,12 @@
     </ng-container>
 
     <!-- estadoVerificacion Column -->
-    <ng-container matColumnDef="estadoValidacion">
+    <ng-container matColumnDef="estadoValidacionString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la verificación
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoValidacion }}
+        {{ element.estadoValidacionString }}
       </td>
     </ng-container>
 
