--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -24,19 +24,19 @@
         </ng-container>
   
         <!-- calificacionInterventoria Column -->
-        <ng-container matColumnDef="calificacionCodigoString">
+        <ng-container matColumnDef="calificacionInterventoria">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación interventoría</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.calificacionCodigoString }}
+            {{ element.calificacionCodigo }}
           </td>
         </ng-container>
   
         <!-- tipoAnexo Column -->
-        <ng-container matColumnDef="tipoAnexoString">
+        <ng-container matColumnDef="tipoAnexo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
           <td mat-cell *matCellDef="let element">
             <div *ngIf="element.calificacionCodigo === '1'">
-              {{ element.informeFinalAnexo.tipoAnexoString }}
+              {{ element.informeFinalAnexo.tipoAnexo }}
             </div>
           </td>
         </ng-container>
@@ -60,7 +60,7 @@
           <td mat-cell *matCellDef="let element">
             <section class="slect-table-contain mt-1em">
               <mat-form-field class="select-width">
-                <mat-label *ngIf="element.validacionCodigo != null">{{ element.validacionCodigoString }}</mat-label>
+                <mat-label *ngIf="element.validacionCodigo != null">{{ element.validacionCodigo }}</mat-label>
                 <mat-select [(ngModel)]="element.verificacion" (selectionChange)="select(element)" required>
                   <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                     {{ estado.name }}
