--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/actualizar-tramite-contvr-contrc/actualizar-tramite-contvr-contrc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/actualizar-tramite-contvr-contrc/actualizar-tramite-contvr-contrc.component.html
@@ -22,7 +22,7 @@
                     Actuaciones
                 </button>
                 <button mat-raised-button color="accent" class="tabs--btn" [ngClass]="{'active': opcion2 === true}"
-                    (click)="opcion2 = true; opcion1 = false;">
+                    (click)="opcion2 = true; opcion1 = false;" [disabled]="this.tieneReclamaciones.length==0">
                     Reclamaciones
                 </button>
             </div>
@@ -37,7 +37,7 @@
                     Actuaciones
                 </button>
                 <button mat-raised-button color="accent" class="tabs--btn" [ngClass]="{'active': opcion2 === true}"
-                    (click)="opcion2 = true; opcion1 = false;">
+                    (click)="opcion2 = true; opcion1 = false;" [disabled]="this.tieneMesasTrabajo.length==0">
                     Mesas de trabajo
                 </button>
             </div>
