--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="row"
-            *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
+            *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
             <div class="col-md-12" style="padding-left: 0;">
                 <div class="row">
                     <div class="pr-1">
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="row"
-            *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
+            *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
             <div class="col-md-12" style="padding-left: 0;">
                 <div>
                     <div class="d-flex align-items-center">
