--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registar-actuacion-notai/form-registar-actuacion-notai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registar-actuacion-notai/form-registar-actuacion-notai.component.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="addressForm.value.actuacionAdelantada==='1'">
+            <div class="row" *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
                         <div class="pr-1">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="addressForm.value.actuacionAdelantada==='1'">
+            <div class="row" *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
                         <div class="d-flex align-items-center">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="addressForm.value.actuacionAdelantada==='1'">
+            <div class="row" *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
                         <div class="pr-1">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="addressForm.value.actuacionAdelantada==='1'">
+            <div class="row" *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
                         <div class="d-flex align-items-center">
