--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.scss
@@ -13,3 +13,54 @@
 .helperWidthText{
     max-width: 1060px;
 }
+.tabs {
+    &--actions {
+        text-align: center;
+        margin-bottom: 3em;
+    }
+  
+    &--btn {
+        padding: .5em 2em;
+        width: 25%;
+        box-shadow: none;
+        border: solid 1px #fff;
+  
+        &.active {
+            background-color: #0A244F;
+            z-index: 1;
+            color: #fff;
+        }
+    }
+  }
+  .botones button{
+    line-height: 1.2;
+    min-height: 33px;
+  }
+  .botones .button-activated{
+    padding: 0 1.5em;
+    line-height: 2.2;
+    min-height: 33px;
+    background-color: var(--mainColor);
+    box-sizing: border-box;
+    position: relative;
+    color: #ffffff;
+    user-select: none;
+    outline: none;
+    border: none;
+    -webkit-tap-highlight-color: transparent;
+    display: inline-block;
+    white-space: nowrap;
+    text-decoration: none;
+    vertical-align: baseline;
+    text-align: center;
+    margin: 0;
+    min-width: 64px;
+    border-radius: 4px;
+    overflow: visible;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+  }
+.mb-3em{
+    margin-bottom: 3em;
+}
