--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-proyectos-registrar-novedad/tabla-proyectos-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-proyectos-registrar-novedad/tabla-proyectos-registrar-novedad.component.html
@@ -9,9 +9,9 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <!-- llaveMEN Column -->
-      <ng-container matColumnDef="llaveMEN">
+      <ng-container matColumnDef="llaveMen">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
-        <td mat-cell *matCellDef="let element"><b>{{element.llaveMEN}}</b></td>
+        <td mat-cell *matCellDef="let element"><b>{{element.llaveMen}}</b></td>
       </ng-container>
 
       <!-- institucionEducativa Column -->
@@ -27,17 +27,17 @@
       </ng-container>
 
       <!-- tipoInterventor Column -->
-      <ng-container matColumnDef="tipoInterventor">
+      <ng-container matColumnDef="tipoIntervencion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de intervención</th>
-        <td mat-cell *matCellDef="let element">{{element.tipoInterventor}}</td>
+        <td mat-cell *matCellDef="let element">{{element.tipoIntervencion}}</td>
       </ng-container>
 
       <!-- Id Column -->
-      <ng-container matColumnDef="id">
+      <ng-container matColumnDef="proyectoId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
         <td mat-cell *matCellDef="let element">
           <section class="table-checkbox radio">
-            <mat-checkbox type="checkbox"></mat-checkbox>
+            <mat-radio-button name="check" (change)="seleccionarProyecto(element)"></mat-radio-button>
           </section>
         </td>
       </ng-container>
