Ajustes flujo observaciones 5.1.1 - 5.1.2

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -80,8 +80,11 @@
             <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0"
               >Tipo de documento</span
             >
-            <span *ngIf="element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0"
+            <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0) || (element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor)"
               >Ver detalle/ Editar</span
+            >
+            <span *ngIf="element.estadoInformeFinal ==='4' && !element.tieneObservacionSupervisor"
+              >Ver detalle</span
             >
           </button>
           <button
