--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -142,16 +142,17 @@
         >
         Enviar informe a validación
       </button>
-       <button
-       *ngIf="element.estadoInformeCod === '4'"
-          mat-button
-          mat-raised-button
-          color="accent"
-          class="btn-table"
-          type="button"
-        >
-        Ver observaciones de supervisor
-      </button>
+      <a
+      *ngIf="element.estadoInformeCod === '4'"
+        mat-button
+        mat-raised-button
+        color="accent"
+        class="btn-table"
+        [routerLink]="['registrar', element.proyectoId]"
+      >
+        <span>Ver observaciones de supervisor
+        </span>
+      </a>
       </td>
     </ng-container>
 
