--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
@@ -54,8 +54,10 @@
           </p>
         </div>
       </div>
-      <div class="row"
-        *ngIf="sesionComiteSolicitud.tipoSolicitudCodigo == tiposSolicitud.ActuacionesControversiasContractuales">
+      <div
+        class="row"
+        *ngIf="sesionComiteSolicitud.tipoSolicitudCodigo == tiposSolicitud.ActuacionesControversiasContractuales"
+      >
         <div class="pr-1">
           <span class="label-left">Número actuación</span>
         </div>
@@ -68,7 +70,16 @@
 
       <div class="row">
         <div class="pr-1">
-          <span class="label-left"> Desarrollo </span>
+          <label
+            class="label-left"
+            for="desarrolloSolicitud"
+            [class.color-secondaryColor]="
+              (addressForm.get('desarrolloSolicitud').invalid && addressForm.get('desarrolloSolicitud').touched) ||
+              (addressForm.get('desarrolloSolicitud').invalid && estaEditando)
+            "
+          >
+            Desarrollo
+          </label>
         </div>
         <div class="col d-flex">
           <quill-editor
@@ -78,8 +89,8 @@
             (onContentChanged)="maxLength($event, 5000)"
             formControlName="desarrolloSolicitud"
             [class.invalid]="
-              (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-              (addressForm.get('observaciones').invalid && estaEditando)
+              (addressForm.get('desarrolloSolicitud').invalid && addressForm.get('desarrolloSolicitud').touched) ||
+              (addressForm.get('desarrolloSolicitud').invalid && estaEditando)
             "
             required
           ></quill-editor>
@@ -93,6 +104,20 @@
               }}
             </span>
             <span class="contador miles mt-3em" *ngIf="!addressForm.get('desarrolloSolicitud').value"> 5000 </span>
+            <span class="icon-incompleto mt-3em">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (addressForm.get('desarrolloSolicitud').invalid && addressForm.get('desarrolloSolicitud').touched) ||
+                  (addressForm.get('desarrolloSolicitud').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
@@ -156,10 +181,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('estadoSolicitud').invalid && addressForm.get('estadoSolicitud').touched) ||
                   (addressForm.get('estadoSolicitud').invalid && estaEditando)
@@ -209,10 +234,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                   (addressForm.get('observaciones').invalid && estaEditando)
@@ -245,10 +270,10 @@
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('url').invalid && addressForm.get('url').touched) ||
               (addressForm.get('url').invalid && estaEditando)
@@ -272,7 +297,7 @@
                 ¿Este tema del orden del día generó compromisos?
               </label>
             </div>
-            <div class="col">
+            <div>
               <mat-radio-group
                 class="radioInput"
                 formControlName="tieneCompromisos"
@@ -286,10 +311,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('tieneCompromisos').invalid && addressForm.get('tieneCompromisos').touched) ||
                   (addressForm.get('tieneCompromisos').invalid && estaEditando)
@@ -339,10 +364,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('cuantosCompromisos').invalid && addressForm.get('cuantosCompromisos').touched) ||
                     (addressForm.get('cuantosCompromisos').invalid && estaEditando)
@@ -390,10 +415,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (compromiso.get('tarea').invalid && compromiso.get('tarea').touched) ||
                       (compromiso.get('tarea').invalid && estaEditando)
@@ -429,10 +454,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (compromiso.get('responsable').invalid && compromiso.get('responsable').touched) ||
                   (compromiso.get('responsable').invalid && estaEditando)
@@ -475,10 +500,10 @@
                     <img
                       class="icon-incompleto--img"
                       src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
                       *ngIf="
                         (compromiso.get('fecha').invalid && compromiso.get('fecha').touched) ||
                         (compromiso.get('fecha').invalid && estaEditando)
