--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
@@ -1,90 +1,111 @@
 <section class="container">
   <div class="text-right">
     <a routerLink="/comiteTecnico" mat-button color="primary" class="btn-regresar">
-      <img src="assets/img/icon/regresar.svg" alt="Regresar">
+      <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
   <div class="text-center" *ngIf="comite">
-    <h1 class="title-menu--h1">
-      Verificar cumplimiento de compromisos {{ comite.numeroComite }}
-    </h1>
+    <h1 class="title-menu--h1">Verificar cumplimiento de compromisos {{ comite.numeroComite }}</h1>
   </div>
   <div class="busqueda">
     <mat-form-field appearance="outline" class="busqueda--input">
       <mat-label>Buscador / Filtro</mat-label>
-      <input matInput #filtro (keyup)="applyFilter($event)">
+      <input matInput #filtro (keyup)="applyFilter($event)" />
     </mat-form-field>
     <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
-      <img src="assets/img/icon/lupa.svg" alt="Buscar">
+      <img src="assets/img/icon/lupa.svg" alt="Buscar" />
     </button>
   </div>
   <div class="text-center table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla">
-
       <ng-container matColumnDef="tarea">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Tarea </th>
-        <td mat-cell *matCellDef="let element"> <b>{{element.tarea}}</b> </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tarea</th>
+        <td mat-cell *matCellDef="let element">
+          <b>{{ element.tarea }}</b>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="responsable">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Responsable </th>
-        <td mat-cell *matCellDef="let element"> {{ element.nombreResponsable }} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Responsable</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombreResponsable }}</td>
       </ng-container>
 
       <ng-container matColumnDef="fechaCumplimiento">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de cumplimiento </th>
-        <td mat-cell *matCellDef="let element"> {{element.fechaCumplimiento | date: 'dd/MM/yyyy'}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de cumplimiento</th>
+        <td mat-cell *matCellDef="let element">{{ element.fechaCumplimiento | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="fechaReporte">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del reporte </th>
-        <td mat-cell *matCellDef="let element"> {{ element.fechaModificacion ? (element.fechaModificacion | date: 'dd/MM/yyyy') : element.fechaCreacion | date: 'dd/MM/yyyy' }} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha del reporte</th>
+        <td mat-cell *matCellDef="let element">
+          {{
+            element.fechaModificacion
+              ? (element.fechaModificacion | date: 'dd/MM/yyyy')
+              : (element.fechaCreacion | date: 'dd/MM/yyyy')
+          }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoReportado">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado reportado </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombreEstado}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado reportado</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombreEstado }}</td>
       </ng-container>
 
       <ng-container matColumnDef="gestionRealizada">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión realizada </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión realizada</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button
-                  color="accent"
-                  class="btn-table"
-                  (click)="openVerDetalle( element )"
-                  [disabled]="element.tieneCompromisos === false">
-                  Ver detalle
+          <button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            (click)="openVerDetalle(element)"
+            [disabled]="element.tieneCompromisos === false"
+          >
+            Ver detalle
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Gestión </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%">Gestión</th>
         <td mat-cell *matCellDef="let element">
-          <section style="display: flex;">
-            <mat-select [(ngModel)]="element.compromisoSeleccionado"
-                        (selectionChange)="onChange( element, $event.value )"
-                        [disabled]="element[ 'esCumplido' ] === true && element.nombreEstado === 'Finalizado'"
-                        style="width: 8.5em; margin: 0px 30px 0 0;">
+          <section style="display: flex">
+            <mat-select
+              [(ngModel)]="element.compromisoSeleccionado"
+              (selectionChange)="onChange(element, $event.value)"
+              [disabled]="element['esCumplido'] === true && element.nombreEstado === 'Finalizado'"
+              style="width: 8.5em; margin: 0px 30px 0 0"
+            >
               <mat-option *ngFor="let estado of estaCumplido" [value]="estado">
                 {{ estado }}
               </mat-option>
             </mat-select>
-            <span style="margin-left: 1em;">*</span>
+            <span style="margin-left: 1em">*</span>
+            <span class="icon-incompleto">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  !element.compromisoSeleccionado && estaEditando
+                "
+              />
+            </span>
           </section>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   <section class="flex-center-btn">
     <button mat-button color="warn" class="btn-guardar" type="button" (click)="onSave()">
-      <img src="assets/img/icon/guardar.svg" alt="guardar">
+      <img src="assets/img/icon/guardar.svg" alt="guardar" />
     </button>
   </section>
 </section>
-
