--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
@@ -186,7 +186,7 @@
         </div>
       </div>
     </div>
-    <div class="text-center animatedOpacity">
+    <div class="text-center animatedOpacity mb-2em">
       <button mat-button color="warn" class="btn-guardar" *ngIf="bitPuedoEditar" type="button" (click)="onSubmit()">
         <img src="assets/img/icon/guardar.svg" alt="Guardar" />
       </button>
