--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-orden-del-dia/crear-orden-del-dia.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-orden-del-dia/crear-orden-del-dia.component.html
@@ -79,8 +79,8 @@
                     class="label-left"
                     for="tema"
                     [class.color-secondaryColor]="
-                      (registroPresupuestal.get('tema').invalid && registroPresupuestal.get('tema').touched) ||
-                      (registroPresupuestal.get('tema').invalid && estaEditando)
+                      (registroPresupuestal.get('tema')?.invalid && registroPresupuestal.get('tema').touched) ||
+                      (registroPresupuestal.get('tema')?.invalid && estaEditando)
                     "
                   >
                     Tema
@@ -108,8 +108,8 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
                       *ngIf="
-                        (registroPresupuestal.get('tema').invalid && registroPresupuestal.get('tema').touched) ||
-                        (registroPresupuestal.get('tema').invalid && estaEditando)
+                        (registroPresupuestal.get('tema')?.invalid && registroPresupuestal.get('tema').touched) ||
+                        (registroPresupuestal.get('tema')?.invalid && estaEditando)
                       "
                     />
                   </span>
@@ -123,9 +123,9 @@
                         class="label-left"
                         for="responsable"
                         [class.color-secondaryColor]="
-                          (registroPresupuestal.get('responsable').invalid &&
+                          (registroPresupuestal.get('responsable')?.invalid &&
                             registroPresupuestal.get('responsable').touched) ||
-                          (registroPresupuestal.get('responsable').invalid && estaEditando)
+                          (registroPresupuestal.get('responsable')?.invalid && estaEditando)
                         "
                       >
                         Responsable
@@ -149,9 +149,9 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
                         *ngIf="
-                          (registroPresupuestal.get('responsable').invalid &&
+                          (registroPresupuestal.get('responsable')?.invalid &&
                             registroPresupuestal.get('responsable').touched) ||
-                          (registroPresupuestal.get('responsable').invalid && estaEditando)
+                          (registroPresupuestal.get('responsable')?.invalid && estaEditando)
                         "
                       />
                     </span>
@@ -166,9 +166,9 @@
                         class="label-left"
                         for="tiempoIntervencion"
                         [class.color-secondaryColor]="
-                          (registroPresupuestal.get('tiempoIntervencion').invalid &&
+                          (registroPresupuestal.get('tiempoIntervencion')?.invalid &&
                             registroPresupuestal.get('tiempoIntervencion').touched) ||
-                          (registroPresupuestal.get('tiempoIntervencion').invalid && estaEditando)
+                          (registroPresupuestal.get('tiempoIntervencion')?.invalid && estaEditando)
                         "
                       >
                         Tiempo de intervención <b class="minutos">Minutos</b>
@@ -206,9 +206,9 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
                           *ngIf="
-                            (registroPresupuestal.get('tiempoIntervencion').invalid &&
+                            (registroPresupuestal.get('tiempoIntervencion')?.invalid &&
                               registroPresupuestal.get('tiempoIntervencion').touched) ||
-                            (registroPresupuestal.get('tiempoIntervencion').invalid && estaEditando)
+                            (registroPresupuestal.get('tiempoIntervencion')?.invalid && estaEditando)
                           "
                         />
                       </span>
@@ -222,8 +222,8 @@
                     class="label-left"
                     for="url"
                     [class.color-secondaryColor]="
-                      (registroPresupuestal.get('url').invalid && registroPresupuestal.get('url').touched) ||
-                      (registroPresupuestal.get('url').invalid && estaEditando)
+                      (registroPresupuestal.get('url')?.invalid && registroPresupuestal.get('url').touched) ||
+                      (registroPresupuestal.get('url')?.invalid && estaEditando)
                     "
                   >
                     URL con soporte
@@ -244,8 +244,8 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
                     *ngIf="
-                      (registroPresupuestal.get('url').invalid && registroPresupuestal.get('url').touched) ||
-                      (registroPresupuestal.get('url').invalid && estaEditando)
+                      (registroPresupuestal.get('url')?.invalid && registroPresupuestal.get('url').touched) ||
+                      (registroPresupuestal.get('url')?.invalid && estaEditando)
                     "
                   />
                 </span>
@@ -289,6 +289,7 @@
       type="button"
       (click)="onSubmit()"
       [style.pointer-events]="getStyle()"
+      [disabled]="tipoDeTemas.invalid"
     >
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
