--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
@@ -211,6 +211,17 @@
                             Tercero de causación
                         </mat-panel-title>
                     </mat-expansion-panel-header>
+                    <mat-card class="shipping-card var-main-gris">
+                        <mat-card-content align="left">
+                            <p><strong>Número de identificación del contratista: </strong><em>900.879.765-2</em></p>
+                            <p><strong>Nombre de contratista: </strong><em>Interventores S.A.</em></p>
+                            <p><strong>Número de factura: </strong><em>FAC00456</em></p>
+                        </mat-card-content>
+                    </mat-card>
+                    <p class="info-sub-title textoGrisVar">
+                        <span>Valor neto de giro: <em>$15.000.000</em></span>
+                        <span>Nuevo valor resgistrado: <em>$0</em></span>
+                    </p>
                     <mat-accordion>
                         <mat-expansion-panel class="expansion-style sub-expansion-black">
                             <mat-expansion-panel-header class="expansion-style--header">
@@ -218,7 +229,7 @@
                                     Costo variable
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
-                            1
+                            <app-form-costo-variable-gbftrec></app-form-costo-variable-gbftrec>
                         </mat-expansion-panel>
                     </mat-accordion>
                     <mat-accordion>
